<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_card_replan_error_desc">Please try another card.</string>
    <string name="add_card_replan_error_header">We had trouble confirming this card</string>
    <string name="address_confirmation_header">We found a match for your address</string>
    <string name="address_confirmation_subheader">"We couldn't verify your entry but recommend this match"</string>
    <string name="address_input_header">Address you entered</string>
    <string name="address_rec_header">Recommended match</string>
    <string name="agc_039385256A8E064A3FBA0E5DC382B8F03961789D7A12A9D0BB248FFEDD6D1470">00CDC2807B6A9D1DC05B9CD790781C01F18EF1005A7EC1C07CCDD4AF8970873A5264049363FC505E50F02413218DA032706B3EB726BD062F08D641A5773D4D533A7BEB11D21B6489C69C0C859BC41C17DB</string>
    <string name="agc_0DC3A56C1AC03D404A409264B0AED075A38F9EB082F5057704EA33D4B5B9B9C9">00B541D0AAFCA7350DC390D4A9A2047DE79FA9E45CBACCC276FEACD51C0D82140527D58FC88D50B1DF42D4D95FB6595A544003C0B4B09A4844EB853537CBF5E9C44C7F15DD1DC79AC24E1A7DA7C207DDFE139AD9F31BC2784876AFEB9B53037318</string>
    <string name="agc_109B7B0344C0EDE50A1F3332C0015C78281E801719F522B4F20FDF815A5BCC3F">00FFEE430ED6391C1757544C1C34D2EF38CFAAA99F943BCCE0CD87B0854033720D5A7491431B6330360DFDAEA1063E8E7D3DCBCC9F93A9C764FCACC591AD9B2CB3C07D2B0D3FB2C0C831D8BEF00F8AF6DBBCB8C10D44AF5D2A3916006346CBC930</string>
    <string name="agc_1DAF2070F644F3B6CEA88178D5DA98CE4A7A380B545F415B1A228519B1E134C8">0055804B0A8C3EAC81B14F86647275CB339F1AF6D86EA42E3DA5689DAC0E9DEFAD50A1090D346FB7CEA9F9CFB8D8E4B4C2</string>
    <string name="agc_1F79ACBA9BD8A7666759524C3052C88689CBB5873811854517CBBE65DC268EAA">FEB3981632E454D2CDF1EDE3A2DCEC35</string>
    <string name="agc_2CF9BE2236D08368B0649449A8546AA52B2038D467F630312C146F9EA821AC2E">00532296105C2B0D8690BD5EC4E84FB13C36D4DDCB68D6C11D323708B0E5941707</string>
    <string name="agc_3C5E7223FA10AEB1FFA081C86F85F3C23A0526877FBC6A3A77C4D36A7BA9AAB3">00B9374DC3964878885BB876F2697A7AB5097ACF8002C12E91E79C347257693AB8DFC3EB852C2A23131FCBC114264B25B7</string>
    <string name="agc_3D7A0A63AA0374539D58FF4B3034CF00D2353E3A780A0F85C35566E329358934">00CE5E86EA611FBB5488F15E3D1530652D7CCEC8DF41CF11D6DC2DE7992F37A3842053DE70E6EB4E19AAC9D1E14F654FD88166493A5E3B567830C9E77E4767629734BBB46679771F76A3B0C4B19B4A87596F62207500F77C6C649CF35DDEC0D8FD</string>
    <string name="agc_42CFA4FE0F87541B3B3F9793F5D829BE381703BB99853CCC25D018996F251536">009106D0AF3DC9B8099C1A218394EACC30B358321F4911932C1C05DC40FF1E8BD0</string>
    <string name="agc_432BA784B7D2E3A6C73AB69659D3300DC6258E318543A10B50EA4B770C67DAB3">000C4F01E57AE07B14EEFC1E1B2789CEA95B6EF761DD5AB2854E1226A99BC30F4DA94FB1ED8CA2EE93FD8DCB47CF4B3B831EC0284C5F13D32E26EC2E96454B6839</string>
    <string name="agc_4A1001369614B0D938752C6AB4967DE352A3ADD13CAE741A7DF78EE728F74136">0058986D9560E798AA6A03AE21366DFC7E6D0414808D200556F14E64507E5A308D</string>
    <string name="agc_4D79CE1E9E81D44FFC3CBFEC80D073F18409AAC96E2DAFB11951005E99B02EDB">006D038733477FEAE1BE4BB1F7C50BC6049582D726DE2D1067083E903D371599BEF2295C4827A552C1F4FA9E1C715B912E166E656F94DD635416E22C24231C0E50</string>
    <string name="agc_4E59F3D37D339A997CACA4A0C457DAA94A1F044555D950F1F9835B0B6F600D38">00B84A852B8BB837763892EC2A484320A1EEEFC7E67F65297BA9B4943FCB86E4F6</string>
    <string name="agc_52C6C717F2BEA9936D7DEDC27E412B9E7AC9A6642A6D0AEE353B2B14737100F5">009634E0BEA8EA0B31572ABD84E361BB763FDCE163A85B5257184C97A26903602EAA9CD232EE033E66F4D330FEAC708A53</string>
    <string name="agc_5B1EF301F6E8D26793B9699E972C1FE3B4563543360C2A380F9C42CED9967B7B">00A3FCD95253AEB019BE4912548B0045BD320DFEAC0827E62F18EE02C6A7989935354EDE03FB68C7A4562E309AA60DF0F0144991F8EF32F4BB30A803878B304D74C86B7787E55ECEC217AC968FE33F408D72CBEBC8ADB92AF4B594DD06E561377F</string>
    <string name="agc_5B5AF298A58B98DB86A04DB0E3B1924F7EAC7A14CA781F042E5F999BD413CC9E">002790B22B491696BF877CB4023CB8A6BCDDC40FADD8830B07EE46E97199B4ADF5D8F1A44BE13C15F39872E74D7A5D5559</string>
    <string name="agc_63F3255D837430EC4C799B2B5A8091A554A101C6FAC114907463E723AF33B544">00C984F5E17EB840ECC3993EBEB6F6663F17FB77BE98DB9CBF4EA36B7D5EB4498370AD333A63499EA11296C5CF5A5D05D4FE530EC4D76B5D8B4F4EE09579300C24E1A7311727F935355B817EB799F19583DD651957F2F5B8397CF47E46831E080F04D740D7C503A3A866092D7DCE193E2456B3AA42C495CF4F21022B5135FA65779A416286721E0082217E7A007DA6D1BFDA7E13256B870F5C51750D6E55F76B8A3B9F94BA49E97520806C10AD82910624F86A1E31E214C9865201F2BD7CA5828E9F773EF322BEBF6A5711799FC35D381BDB6AE51CCD58C9B5B4C44C5F81F116BB</string>
    <string name="agc_66412D70318648FA3BDD00A3CB2E73EE439F788EBA8010232B3B145A1ADE18F4">00458B94EC7AE7A8262332BB4487E0C7EF6C398A1A413AC288C2205EE023B7AE722AC3C58ABD236192BE5D30E454EC09FF</string>
    <string name="agc_69589FA8E5257AA8E3C477503B5586F4B4981C77F69B612318E3FC7AF1B00890">00C72E1471C09565C7CBEFFA568EA93C9D3F26437D668686F96D9AFFE56B34B177C22BB6CB1287BCC004F705177BAD4CE4</string>
    <string name="agc_6D239E4C2FF1354F6DBB62ED715B0B2A4058A2C1B368EB9F5FAF8B457ED28FA6">00105A2DE2B71D9EB45F08FC580F789DB3F2B7869158B87872033FB2192E12484E702CD33E2F8CFC4F7045E40AC140E943</string>
    <string name="agc_6DC2F1E7B3508CE97B8A34B184EAD19FADAAC83160422DE0BA2F78B0438C6A98">00288499F1A5C855F388A9BBFB066A4A59AEB19E7B217F734D18E853DDECEE2F0496C641C0DD18DEFA98FCAA5DBDD17343</string>
    <string name="agc_7946AE46AB6C7F8CBDCAF61B99109C7C5309E95125FEA7458FBF603EC34F79F0">008F110FE1FA75C33300758E7F8C6851043B96B3B463CBCCA49E0D036568B5DC50</string>
    <string name="agc_836CE23119A6E21FA622B66B25341D1D32735FAA2839B33D60C4D59B7AD62151">00FA4E1DBD3DD6EC4C461FE238DE3FAB77DC7B8DC03658F9D5ED8BAC2FFA5BED67CA4FE0EB561FC9B3B2E3379D00A908FE03C18AFECD1E1B63A5B5D81630ED4B13</string>
    <string name="agc_840FE2348B9312C51373EFB2E2F030D10C43688DDE98467C8DD63AC7DC1855AB">00E36279349B482251ED56581C63EBB1D9DF30AE7F0CF083C37B757A3500C9A19C</string>
    <string name="agc_864E57EAF6D5DB70BE861700AFF6C17A93A9D202732BCB4048B0CDBB6EBF578F">001C7A035E64D1658B06576FF096EE591AF14E5466B2E2C1C0C512079FA5C837F05A6D064A3B8BFE92090B910E5AE637C3F3A9FB9C572242527A6719C3E5C8F056</string>
    <string name="agc_8CBEB54DD45F5D2D07C517A93D2C07AC37E088876F07FDDF2D74CEFF5500AE68">009D1BCDC73F8725CFE9F3CC26E985101A041B70F136E02FF7018C731CBDF1535A7EB58280FF7C4BAF7E06DE23DC661E7A</string>
    <string name="agc_8EC943399EB9730C69A7B8E4E46D24911E8F900AC2F52A3DF251327694CD8EFA">00F0ED9A4060D840E7CAA4F99E20FF71643A1AF6F1E006A41FE984D191D7EE5771E37DECCB8D270FB2ED5EFF2446F767C57CC34DB82DB358AF77C9BDD5175B43BD</string>
    <string name="agc_943F28EFD067BBA193A2BABED8B2DCC2AB346B483A7A7FFE4EEF97B6A6E8E95B">0043DAC4C30AC4B39EABC3F61E1BEBBA4AE169DC961AD578F436E868B98CAE502A6FB58FD46730978FB3A798B3D0E17A9F</string>
    <string name="agc_B1D468BFE76734080F76B2B7AFCD4E74561AE0CB6D3E48BC35857EFB95EA0BA0">00C21A643FDEE1162690BE4025E19559879DBF00AA2B1DDADBB43818FBB3316AB6E8355B8324991FA2ABD4CA83D7BBA70E</string>
    <string name="agc_B306EDA810E24A85B9E96B29457CBA22E7AB7624F9F2D241D325EAA1B74DAB4B">00FB048082CDA1DF45EB1B1ECFC2B844400C1C5D3ECF0994C84E5BD971BC7BF815058D2D0C5E06B5B6B4EA6FAAF9E83C3226B476FEBFDB6717A0D8101A6D501F699FCEF8EEDBACE3CDA7EB04262C6F00F3D32FB300DF6BF9500E76C5EB8E574FAE127555135E987F0FEBCB05A31DCE2D77F84FA52A2E2346EB9DE38296C4994CFC</string>
    <string name="agc_B67855847386884DB0CC7F366F0BDBE5590016B80BB3F5DD82FCAB6DA71B308E">0085E7AFD62EB71364B033D8DC1687806012A1207FB8F87A636D4D5EC90065FA99AF6AD787ED711BDE0058F04EC6EDB99ABD182EAA85A4595ABD30FA8FF5FD8F64</string>
    <string name="agc_B9EAB77AB7FDFB9A9577EEAC5B15C13D00CD198883FD8D2BCF6CD048B1DB8EAC">73C18618252744C3709955C1BF4DF30E</string>
    <string name="agc_BC901C8B36CDC03EBB04723478E129DF780D638FD72D54B370EA8D3B66E0F004">00A2BB12027F5F1CEF91BEB6860CB0F3F615F5736AFA82D2E54C183B2534CF0E3F68F33205CF9F57351A843939DAC31336750D4C1CE8FA7328671B3E782DDD042D2127C0234812A3BC5408D5FACBC1B9EF40AB5E0A669E30F1C60780B9E218AE2A</string>
    <string name="agc_C3DED0D7C90067F30C634C6CDEFFC61344FA2694CC52ECE824A3F70C8CDFA666">00A4B0424E9ED57887D715936CEC9C6E3B7E259F43CDB4397D8E686432C16068BDC219653755A13D2622725203D2D312A9</string>
    <string name="agc_C5B898FED8EB426373F5B7236223347292A472BFE8B3AF180298BA6A87272CB5">00FCA984814C9B1E73A701FB06101175821CE2B917053A4D68E1585180BDADBCF195F9E0C989FCA2E48CA28252D6FEEF3515C01AB87199D4A263BD0EBFA23EE493</string>
    <string name="agc_C614C7C98C4CAB19398311B2C2FE838A2E7F3C715B230710A5E58E3E578F45BB">00AD9CE7B895F42A0DCDC9A70E092FA5102BEB2B6E2DB175A002F9D0B1C53F6EAE</string>
    <string name="agc_C84FA3884427F8CBBA6C61F1A49F27195E388EEB48D06EBE4BF55B847BA24A19">007D3AC6D70EE32E7A25E0E5B1475581E1170B9F228CB24F6D7D32A44C2F14B421EDBD30DC1E6181407DF83ECDF4B80527</string>
    <string name="agc_D96112F0F656550C8068DE16CF313478D253DDAF4E18EEE01F6D94CA6DD5013F">F37D026B8CAB74555517D9DB3941C2BC</string>
    <string name="agc_E0F2A5F770721323CD9E494601CD2DD641D0544D4AD53BF2F693C48164005168">00F58C26152861A532085862364F6E6E47259915ECFF633C9B6EFB372E0DEB038EE97822DDF482B5017158303C071982AB533AF0232EA93DFEEE84FB0CCC5194422AA1FB5B77C0988E1C3FF89EF0328D18FD6ACAB7BB8862DA6B75DB1F65DB474F</string>
    <string name="agc_EB3381D0A0BF05A68A3A3BB3A0A5F32CA98503EC69D0CA217FC3A1403801B633">00DAAD40E41D8DEF8BE45A2D4C19C16DDEC534FAD168F7AB322FCC00DDA28A1CC4</string>
    <string name="bt_add_card">Add card</string>
    <string name="bt_card_details">Card Details</string>
    <string name="bt_confirm">Confirm</string>
    <string name="bt_edit">Edit</string>
    <string name="bt_edit_button_description">Edit saved payment methods</string>
    <string name="bt_notice_of_collection">By paying with my card, I agree to the PayPal Privacy Statement.</string>
    <string name="bt_recent">Recent</string>
    <string name="bt_saved_payments">Saved payment methods</string>
    <string name="bt_select_payment_method">Select Payment Method</string>
    <string name="bt_sms_code">SMS Code</string>
    <string name="bt_sms_code_sent_to">Enter the SMS code sent to %s</string>
    <string name="bt_supported_payments">Supported payment methods</string>
    <string name="bt_use_a_different_phone_number">Use a different phone number</string>
</resources>