<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:background="@color/bt_base_background" android:layout_width="fill_parent" android:layout_height="wrap_content" android:minHeight="200.0dip" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
        <LinearLayout android:orientation="vertical" android:id="@id/bt_vaulted_payment_methods_wrapper" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <RelativeLayout android:paddingTop="@dimen/bt_choose_existing_payment_label_padding_top" android:layout_width="wrap_content" android:layout_height="wrap_content">
                <Button android:theme="@style/bt_edit_button" android:id="@id/bt_vault_edit_button" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bt_edit" android:contentDescription="@string/bt_edit_button_description" android:layout_alignParentEnd="true" style="@style/Widget.AppCompat.Button.Borderless.Colored" />
                <TextView android:gravity="center_vertical" android:id="@id/bt_vaulted_payment_methods_header" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/bt_recent" android:layout_alignTop="@id/bt_vault_edit_button" android:layout_alignBottom="@id/bt_vault_edit_button" android:layout_marginStart="20.0dip" android:layout_alignParentStart="true" style="@style/bt_choose_payment_label" />
            </RelativeLayout>
            <androidx.recyclerview.widget.RecyclerView android:id="@id/bt_vaulted_payment_methods" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@string/bt_saved_payments" />
            <include layout="@layout/bt_section_divider" />
        </LinearLayout>
        <TextView android:id="@id/bt_supported_payment_methods_header" android:paddingTop="@dimen/bt_choose_new_payment_label_padding_top" android:paddingBottom="@dimen/bt_payment_label_padding_bottom" android:text="@string/bt_select_payment_method" style="@style/bt_choose_payment_label" />
        <androidx.recyclerview.widget.RecyclerView android:id="@id/bt_supported_payment_methods" android:paddingLeft="4.0dip" android:paddingRight="4.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:contentDescription="@string/bt_supported_payments" />
    </LinearLayout>
    <LinearLayout android:gravity="center" android:orientation="vertical" android:id="@id/bt_select_payment_method_loader_wrapper" android:background="@color/bt_base_background" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ProgressBar android:layout_gravity="center" android:id="@id/bt_select_payment_method_loader" android:layout_width="@dimen/bt_progress_bar_diameter" android:layout_height="@dimen/bt_progress_bar_diameter" android:indeterminate="true" />
    </LinearLayout>
</FrameLayout>
